--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Jeg har nettopp forket denne repositorien, hva gjør jeg? 1. I terminal, kjør npm install, dette skal installere alle dependencies denne repoen trenger.
+
 Hvordan lage et nytt component: 1. Lag en ny folder inni src folderen med samme navn som komponenten du vil lage. Hvis du vil lage en button kan den hete DITT_KODEHODENAVN_Button.
 
              2. Inni denne folderen lager du en index.js fil, og en komponentfil som heter det samme som mappen, f.eks DITT_KODEHODENAVN_Button.jsx
