--- a/.storybook/Teste Komponent.mdx
+++ b/.storybook/Teste Komponent.mdx
@@ -1,4 +1,4 @@
-Hvordan teste componenten du lager:
+            ## Hvordan teste componenten du lager:
 
              1. Kjør i terminalen npm run build. Se at denne kjører uten error.
 
